--- a/build.xml
+++ b/build.xml
@@ -253,7 +253,7 @@ in this Software without prior written authorization from Stanford University.
   </target>
 
   <!-- ==================================================================== -->
-  <target name="tests"
+  <target name="test-all"
    depends="prepare.test,check.junit,jar-tests"
    description="Run all the junit tests (test/src/**/Test*.class" >
     <echo>
