--- a/build.xml
+++ b/build.xml
@@ -236,6 +236,20 @@ in this Software without prior written authorization from Stanford University.
   </target>
 
   <!-- ==================================================================== -->
+<!--  find . -name \*.java -print | etags -t -S - -->
+  <target name="tags" depends="prepare"
+   description="Build a TAGS file in src/" >
+    <apply executable="etags" dir="${src}"
+           relative="true"
+           parallel="true">
+      <arg value="-S"/>
+<!--        <arg value="-o"/> -->
+<!--        <arg file="${etags.filename}"/> -->
+      <fileset dir="${src}" includes="**/*.java"/>
+    </apply>
+  </target>
+
+  <!-- ==================================================================== -->
   <target name="proxy" depends="jar-tests"
    description="Run the proxy" >
     <java classname="org.lockss.proxy.StartProxy" fork="true">
