--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,13 @@ in this Software without prior written authorization from Stanford University.
 
 <project name="LOCKSS Gamma" default="test-all" basedir=".">
 
+<description>
+Args:
+  -Dclass=pack.age.Class    Specify class for test-one, test-class, run-class
+  -Dshowoutput=yes          With test-one, show System.err output as it happens
+  -Dargs="args ..."         Supply cmd line args to run-class
+</description>
+
   <!-- Set to yes (on command line) to see output as it happens -->
   <property name="showoutput" value="no" />
 
