--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,8 @@ Args:
   -Dclass=pack.age.Class    Specify class for test-one, test-class, run-class
   -Dshowoutput=yes          With test-one, show System.err output as it happens
   -Dargs="args ..."         Supply cmd line args to run-class
+  -Dloglevel=debug          Set default log level to debug for
+                               test-all, test-one, test-class, run-class
 </description>
 
   <!-- Set to yes (on command line) to see output as it happens -->
