--- a/build.xml
+++ b/build.xml
@@ -381,7 +381,7 @@ Args:
       <doclet name="org.lockss.doclet.Indexer"
               path="${lockss.doclet.jar}">
 	<param name="-o" value="${index.file}" />
-<!--  	<param name="-dots" value="0" /> -->
+  	<param name="-dots" value="0" />
       </doclet>
       <classpath refid="compile.classpath" />
     </javadoc>
@@ -394,7 +394,7 @@ Args:
       <arg value="-l"/>
       <arg value="50"/>
       <arg value="--copies=${copies}"/>
-<!--        <arg value="-prologue=matrix"/> -->
+      <arg value="--prologue=matrix"/>
 <!--        <arg value="-o"/> -->
 <!--        <arg value="foo.ps"/> -->
       <arg value="${index.file}"/>
