--- a/build.xml
+++ b/build.xml
@@ -78,6 +78,9 @@ Args:
   <property name="temp.build"     value="${basedir}/tempbuild"/>
 
   <!--  Jars -->
+  <property name="castor.jar"     value="${lib}/castor-0.9.4.1-xml.jar"/>
+  <property name="xerces.jar"     value="${lib}/xercesImpl.jar"/>
+  <property name="xmlparser.jar"  value="${lib}/xmlParserAPIs.jar"/>
   <property name="jetty.jar"      value="${lib}/org.mortbay.jetty.jar"/>
   <property name="jettytools.jar" value="${lib}/org.mortbay.tools.jar"/>
   <property name="servlet.jar"    value="${lib}/javax.servlet.jar"/>
@@ -106,6 +109,9 @@ Args:
 
   <!--  Classpaths -->
   <path id="compile.classpath">
+    <pathelement path="${castor.jar}" />
+    <pathelement path="${xerces.jar}" />
+    <pathelement path="${xmlparser.jar}" />
     <pathelement path="${jetty.jar}" />
     <pathelement path="${jettytools.jar}" />
     <pathelement path="${servlet.jar}" />
