--- a/build.xml
+++ b/build.xml
@@ -105,6 +105,7 @@ Args:
 
   <!--  Files -->
   <property name="test.classpath.file" value="${test}/test-classpath"/>
+  <property name="production.classpath.file" value="${lib}/run-classpath"/>
   <property name="ant-contrib.resource"
                           value="net/sf/antcontrib/antcontrib.properties"/>
 
@@ -210,6 +211,7 @@ Args:
     <delete file="${lockss.ant.jar}" quiet="true"/>
     <delete file="${lockss.doclet.jar}" quiet="true"/>
     <delete file="${test.classpath.file}" quiet="true"/>
+    <delete file="${production.classpath.file}" quiet="true"/>
   </target>
 
   <target name="clean-tempbuild"
@@ -300,9 +302,14 @@ Args:
     <jar jarfile="${lockss.test.jar}" basedir="${test.classes}" >
        <include name="**/" />
     </jar>
-    <pathconvert refid="test.run.classpath" property="tmp.clspth"
+    <pathconvert refid="test.run.classpath" property="tmp.test..clspth"
       targetos="unix" />
-    <echo message="${tmp.clspth}" file="${test.classpath.file}"/>
+    <echo message="${tmp.test.clspth}" file="${test.classpath.file}"/>
+    <pathconvert refid="test.run.classpath" property="tmp.run.clspth"
+      targetos="unix">
+      <map from="${basedir}/lib" to="${JAVA.LIB.PATH}" />
+    </pathconvert>
+    <echo message="${tmp.run.clspth}" file="${production.classpath.file}"/>
   </target>
 
   <!-- ==================================================================== -->
