--- a/build.xml
+++ b/build.xml
@@ -302,12 +302,13 @@ Args:
     <jar jarfile="${lockss.test.jar}" basedir="${test.classes}" >
        <include name="**/" />
     </jar>
-    <pathconvert refid="test.run.classpath" property="tmp.test..clspth"
+    <pathconvert refid="test.run.classpath" property="tmp.test.clspth"
       targetos="unix" />
     <echo message="${tmp.test.clspth}" file="${test.classpath.file}"/>
     <pathconvert refid="test.run.classpath" property="tmp.run.clspth"
       targetos="unix">
-      <map from="${basedir}/lib" to="${JAVA.LIB.PATH}" />
+      <!-- entity codes below are open and close curly brace -->
+      <map from="${basedir}/lib" to="$&#x07b;JAVA.LIB.PATH&#x07d;" />
     </pathconvert>
     <echo message="${tmp.run.clspth}" file="${production.classpath.file}"/>
   </target>
