--- a/build.xml
+++ b/build.xml
@@ -361,6 +361,7 @@ Args:
              windowtitle="LOCKSS API"
              doctitle="LOCKSS"
              verbose="false"
+	     failonerror="true"
              overview="${src}/overview.html"
              bottom="Copyright &#169; 2002 Board of Trustees of Leland Stanford Jr. University, all rights reserved.">
        <classpath refid="compile.classpath" />
