--- a/build.xml
+++ b/build.xml
@@ -177,13 +177,10 @@ Args:
   </target>
 
   <!-- ==================================================================== -->
-  <target name="prepare.test" depends="prepare">
+  <target name="prepare.test"
+       depends="prepare,-set.junit.task.available,-set.junit.available">
     <mkdir dir="${test.classes}" />
     <mkdir dir="${test.results}" />
-    <available property="junit.task.available" 
-               classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" />
-    <available property="junit.available" 
-               classname="junit.framework.Test" />
     <condition property="class.arg.specified">
       <and>
         <isset property="class" />
@@ -199,6 +196,16 @@ Args:
                resource="${ant-contrib.resource}">
 	 <classpath refid="ant-contrib.classpath" />
     </available>
+  </target>
+
+  <target name="-set.junit.task.available" unless="junit.task.available">
+    <available property="junit.task.available" 
+         classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" />
+  </target>
+
+  <target name="-set.junit.available" unless="junit.available">
+    <available property="junit.available" 
+               classname="junit.framework.Test" />
   </target>
 
   <!-- ==================================================================== -->
