--- a/build.xml
+++ b/build.xml
@@ -86,7 +86,8 @@ Args:
   <property name="castor.jar"     value="${lib}/castor-0.9.4.1-xml.jar"/>
   <property name="xerces.jar"     value="${lib}/xercesImpl.jar"/>
   <property name="xmlparser.jar"  value="${lib}/xmlParserAPIs.jar"/>
-  <property name="jetty.jar"      value="${lib}/org.mortbay.jetty.jar"/>
+<!--  <property name="jetty.jar"     value="${lib}/org.mortbay.jetty.jar"/> -->
+  <property name="jetty.jar"      value="${lib}/org.mortbay.jetty-jdk1.2.jar"/>
   <property name="jettytools.jar" value="${lib}/org.mortbay.tools.jar"/>
   <property name="servlet.jar"    value="${lib}/javax.servlet.jar"/>
   <property name="jaxp.jar"       value="${lib}/javax.xml.jaxp.jar"/>
@@ -677,6 +678,7 @@ Test results in ${test.results}
     <junit fork="no" printsummary="yes" haltonerror="yes" haltonfailure="yes"
          filtertrace="yes"
          showoutput="${showoutput}">
+      <jvmarg value="-Xmx128m"/>  <!-- no effect unless both fork=yes -->
       <test fork="no" name="${class}" />
       <formatter type="plain" usefile="false" />                  
       <classpath> 
