--- a/build.xml
+++ b/build.xml
@@ -343,6 +343,7 @@ Args:
 	     value="now"/>
       <entry key="build.user.name" value="${user.name}"/>
       <entry key="build.host" value="${env.HOSTNAME}"/>
+      <entry key="build.releasename" value="${env.DAEMONBUILDNAME}"/>
     </propertyfile>
   </target>
 
