--- a/build.xml
+++ b/build.xml
@@ -632,11 +632,12 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
     <jar jarfile="${lockss.test.jar}" basedir="${test.classes}" >
        <include name="**/" />
     </jar>
-    <!-- Write the classpath to a file, so scripts can get it -->
+    <!-- Write test classpath to a file, so scripts can get it -->
     <pathconvert refid="test.run.classpath" property="tmp.test.clspth"
       targetos="${detected.os}" />
     <echo message="${tmp.test.clspth}" file="${test.classpath.file}"/>
-    <pathconvert refid="test.run.classpath" property="tmp.run.clspth"
+    <!-- Write run classpath to a different file, for package build -->
+    <pathconvert refid="run.classpath" property="tmp.run.clspth"
       targetos="${detected.os}">
       <!-- entity codes below are open and close curly brace -->
       <map from="${basedir}/lib" to="$&#x07b;JAVA.LIB.PATH&#x07d;" />
