--- a/build.xml
+++ b/build.xml
@@ -440,11 +440,9 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
     </javac>
     <copy todir="${classes}" >
        <fileset dir="${src}" >
-          <include name="**/*.js"/>
-          <include name="**/*.xml"/>
+          <include name="**/*.xml"/>   <!-- mapping files in various dirs -->
           <include name="**/*.props"/>
-          <include name="**/*.gif"/>  <!-- should be more selective.  now -->
-          <include name="**/*.html"/>  <!-- gets files in gimp-created dirs -->
+          <include name="org/lockss/htdocs/**/*"/>
        </fileset>
     </copy>
   </target>
