--- a/build.xml
+++ b/build.xml
@@ -634,7 +634,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
       targetos="${detected.os}" />
     <echo message="${tmp.test.clspth}" file="${test.classpath.file}"/>
     <!-- Write run classpath to a different file, for package build -->
-    <pathconvert refid="run.classpath" property="tmp.run.clspth"
+    <pathconvert refid="test.run.classpath" property="tmp.run.clspth"
       targetos="${detected.os}">
       <!-- entity codes below are open and close curly brace -->
       <map from="${basedir}/lib" to="$&#x07b;JAVA.LIB.PATH&#x07d;" />
