--- a/build.xml
+++ b/build.xml
@@ -145,6 +145,8 @@ Args:
   				  value="${lib}/commons-collections.jar"/>
   <property name="commons.logging.jar"
   				  value="${lib}/commons-logging.jar"/>
+  <property name="commons.httpclient.jar"
+  				value="${lib}/commons-httpclient-2.0.jar"/>
   <property name="junit.jar"      value="${test.lib}/junit.jar"/>
   <property name="junit.addons.jar" value="${test.lib}/junit-addons-1.4.jar"/>
   <property name="httpunit.jar"    value="${test.lib}/httpunit.jar"/>
@@ -188,6 +190,7 @@ Args:
     <pathelement path="${regexp.jar}" />
     <pathelement path="${commons.collections.jar}" />
     <pathelement path="${commons.logging.jar}" />
+    <pathelement path="${commons.httpclient.jar}" />
     <pathelement path="${jetty.jar}" />
     <pathelement path="${jettytools.jar}" />
     <pathelement path="${servlet.jar}" />
