--- a/build.xml
+++ b/build.xml
@@ -219,6 +219,7 @@ Args:
     <path refid="test.compile.classpath" />
     <pathelement path="${lockss.test.jar}" />
     <pathelement path="${lockss.ant.jar}" />
+    <pathelement path="${lockss.tools.jar}" />
   </path>
 
   <path id="tools.compile.classpath">
