--- a/build.xml
+++ b/build.xml
@@ -510,6 +510,12 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
        <classpath refid="tools.compile.classpath" />
        <include name="**/*.java"/>
     </javac>
+    <copy todir="${tools.classes}" >
+       <fileset dir="${tools.src}" >
+          <include name="**/*.xml"/>   <!-- mapping files in various dirs -->
+          <include name="**/images/*"/>
+       </fileset>
+    </copy>
   </target>
   <target name="compile-generated"
           depends="prepare,generate-plugin-wrapper,jar-lockss"
