--- a/build.xml
+++ b/build.xml
@@ -455,6 +455,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
        <fileset dir="${src}" >
           <include name="**/*.xml"/>   <!-- mapping files in various dirs -->
           <include name="**/*.props"/>
+          <include name="**/*.keystore"/>
           <include name="commons-logging.properties"/>
           <include name="org/lockss/htdocs/**/*"/>
        </fileset>
