--- a/build.xml
+++ b/build.xml
@@ -479,6 +479,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
     <copy todir="${test.classes}" >
        <fileset dir="${test.src}" >
           <include name="**/*.xml"/>   <!-- mapping files in various dirs -->
+          <include name="**/*.keystore"/>   <!-- java keystores -->
        </fileset>
     </copy>
   </target>
