--- a/build.xml
+++ b/build.xml
@@ -825,7 +825,7 @@ java -classpath &quot;${tmp.ptool.clspth.unix}&quot; org.lockss.devtools.plugind
   </target>
 
   <!-- ==================================================================== -->
-  <target name="javadoc" depends="compile-lockss,-load-build-info"
+  <target name="javadoc" depends="jar-tests,-load-build-info"
    description="Build the LOCKSS javadoc">
     <mkdir dir="${javadoc}"/>
     <!-- Old files can result in misleading stuff in the docs.  Since
@@ -836,6 +836,11 @@ java -classpath &quot;${tmp.ptool.clspth.unix}&quot; org.lockss.devtools.plugind
     </delete>
     <property name="javadoc.header"
               value="Built ${build.timestamp} on ${build.host}" />
+    <!-- Write the param doc into the doc tree -->
+    <java classname="ParamDoc" fork="true">
+       <classpath refid="test.run.classpath" />
+       <arg line="-o ${javadoc}/paramdoc.txt lockss.jar" />
+    </java>
     <javadoc
 	     failonerror="true"
              packagenames="org.lockss.*"
@@ -1071,14 +1076,6 @@ java -classpath &quot;${tmp.ptool.clspth.unix}&quot; org.lockss.devtools.plugind
       <arg line="${args}" />
       <arg value="${class}"/>
     </exec>
-  </target>
-
-  <!-- ==================================================================== -->
-  <target name="proxy" depends="jar-tests"
-   description="Run the proxy" >
-    <java classname="org.lockss.proxy.StartProxy" fork="true">
-       <classpath refid="test.run.classpath" />
-    </java>
   </target>
 
   <!-- ==================================================================== -->
