--- a/build.xml
+++ b/build.xml
@@ -490,6 +490,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
     <copy todir="${test.classes}" >
        <fileset dir="${test.src}" >
           <include name="**/*.xml"/>   <!-- mapping files in various dirs -->
+          <include name="**/*.keystore"/> <!-- test keystores -->
        </fileset>
     </copy>
   </target>
